# phinix-nexus-v1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: testing.ipynb
src/exe/: generate_template.py  run_pipeline.py
src/extract/local/: read_csv.py  read_data.py  read_excel.py  read_yml.py
src/helpers/: calc_helpers.py  generic_helpers.py  orchestrator_helpers.py
src/load/: write_csv.py  write_data.py  write_excel.py  write_string.py  write_xml.py
src/mappers/: abstract_mappers.py  component_ops_mappers.py  loader_mappers.py  pandas_filter_mappers.py  pipeline_ops_mappers.py  validator_mappers.py
src/notebooks/: mermaid_test.ipynb
src/operations/: component_ops.py  pipeline_ops.py
src/orchestrator/: component_orchestrator.py  config_orchestrator.py  pipeline_orchestrator.py
src/stock/: variables.py
src/stock/configs/components/: parameterXformula.yml  parameter_x_description.yml  parameter_x_field.yml  parameter_x_formula.yml  parameter_x_values.yml  parentXparameter.yml  parent_x_parameter.yml  requirementXparameter.yml  requirement_x_parameter.yml  statusXcolor.yml  (+3 more)
src/stock/templates/: load_component.j2
src/stock/xml_scripts/: abstract_xml_generator.py  visualizer_parameters.py
src/utils/: components_pandas_wrapper.py  file_loader.py  pandas_component_wrapper.py
src/validators/: extract_validator.py  helpers_validator.py  load_validator.py  misc_validator.py  operations_validators.py  orchestrator_validators.py  pipeline_validator.py  run_validator.py  utils_validator.py
src/validators/data_validators/: input_data_validator.py
(+5 files in other folders)
